--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 
   <style>
+
     @import url('https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap');
   
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Pacifico&display=swap');
@@ -31,12 +32,12 @@
     @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Jacquard+12&family=Jaro:opsz@6..72&family=Mate+SC&display=swap');
     </style>
 
-  <section class="sec1">
+  <section class="sec1  ">
 
     <header>
 
       <p id="logo">🅛🅔🅰️🅡🅝🅘🅵🆈</p>
-      <div class="navbar">
+      <div class="navbar ">
         <nav>
           <ol>
             <li>Home</li>
@@ -77,7 +78,7 @@
             <span class="text">Discover more</span>
           </span>
         </button>
-        <button class="get">Get started</button>
+        <a href="#started"><button class="get">Get started</button></a>
       </div>
     </div>
 
@@ -135,18 +136,18 @@
   </section>
 
 
-  <section class="bg-dark container-fluid sec3">
+  <section id="started" class="bg-dark container-fluid sec3">
 
     <h2 class="plat">Welcome to our e-learning platform!<br> <span class="engag">Dive into engaging lessons and
         resources tailored just for you.<br></span></h2>
     <div class="cardi">
-      <div class="card moja mb-3" style="width: 400px;">
-        <img src="https://img.freepik.com/free-photo/asian-criminal-hood-hacking-server-stealing-data-while-committing-online-crime-young-hacker-running-illegal-malicious-software-code-computer-screen-cracking-password_482257-74649.jpg?t=st=1718647294~exp=1718650894~hmac=de0f83e1454322b7d47df65b261da72afb0ba5ed399da29bcd6d6900242cfdc4&w=1380" class="card-img-top" alt="...">
-        <div class="card-body">
+      <div class="card moja mb-3" style="width: 400px; height: 550px;">
+        <img src="https://img.freepik.com/free-photo/html-css-collage-concept-with-hacker_23-2150061984.jpg?t=st=1718863492~exp=1718867092~hmac=326314af7a38e76473c5c4d156e529d5c254e2bdb3e3a0bfa567a9443a3bffb5&w=1380" class=" girl card-img-top" alt="...">
+        <div class=" mainc card-body">
           <h5 class=" codingg card-title">programing and coding courses</h5>
           <p class=" techno card-text">
-            Our programming and coding course offers hands-on learning in various languages and technologies, empowering you to build applications, solve problems, and advance your tech career with confidence.</p>
-          <a href="#coursesec" class="btn btn-primary">Learn more</a>
+            Our programming and coding course offers hands-on learning in various languages and technologies, empowering you to build applications and solve problems.Learn coding with our hands-on course in various technologies.Master programming skills through immersive, hands-on learning in diverse technologies</p>
+          <a href="#coursesec" class="btn btn-primary">Get started</a>
         </div>
       </div>
 
@@ -157,14 +158,14 @@
 
         </div>
         <img src="https://img.freepik.com/free-photo/man-reading_1048-1632.jpg?t=st=1718700338~exp=1718703938~hmac=9baa3a6ee97545dbec040c8added23136225784d8944c0f0c971e31a92129052&w=900" height="300px"class="card-img-bottom" alt="...">
-        <a href="novel.html" class="btn btn-primary">Learn more</a>
+        <a href="novel.html" class="btn btn-primary">Get started</a>
       </div>
-      <div class="card tatu mb-3" style="width: 400px;">
+      <div class="card tatu mb-3" style="width: 400px; height: 550px;">
         <img src="https://img.freepik.com/free-photo/close-up-shot-male-wonk-looks-scrupulously-keeps-hand-rim-spectacles-dressed-formalwear-sits-desktop-reads-literature_273609-23679.jpg?t=st=1718733368~exp=1718736968~hmac=626af1f15432d85cb2bc937050f4ada224188f2d83cceb98ab6b20c8f7d17547&w=1380" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title revi">Free revision papers for highschool student </h5>
-          <p class=" comp card-text">Our site provides a comprehensive collection of high school past papers, helping students prepare effectively for exams with a wide range of subjects and years covered.</p>
-          <a href="#" class="btn btn-primary">Learn more</a>
+          <h5 class="card-title revi">Free revision books for all student </h5>
+          <p class=" comp card-text">Our site provides a comprehensive collection of all school revision books, helping students prepare effectively for exams with a wide range of subjects and years covered.Access free revision books to enhance your learning and success.Discover free revision books for effective study and exam preparation</p>
+          <a href="#"   class="btn btn-primary">Get started</a>
         </div>
       </div>
     </div>
