--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <section class="sec1  ">
 
-    <header>
+    <header class="header">
 
       <p id="logo">🅛🅔🅰️🅡🅝🅘🅵🆈</p>
       <div class="navbar ">
@@ -57,14 +57,14 @@
       </div>
 
     </header>
-    <div class="im">
+    <div class="im ">
       <div class="parag">
         <h1 id="disc"><span class="discover">Discover Your Potential</span><br> <span class="lenify">with
             Learnify</span><br></h1>
         <div class="unlock">
           <p class="ppp"> <span class="world"> Unlock a world of knowledge with Learnify <i
-                class="fa-solid fa-unlock"></i></span><br> <span class="premier">the premier e-learning platform</span>
-            <i class="fa-solid fa-graduation-cap"></i> <span>designed to help you achieve your dreams</span><br> <span
+                class="fa-solid fa-unlock"></i></span><br> <span class="premier">The premier e-learning platform
+            <i class="fa-solid fa-graduation-cap"></i>designed to help you achieve your dreams</span><br> <span
               class="whether">Whether you want to advance your career, master a new skill, or explore Learnify
               offers</span></p>
         </div>
@@ -78,14 +78,14 @@
             <span class="text">Discover more</span>
           </span>
         </button>
-        <a href="#started"><button class="get">Get started</button></a>
+        <a href="#started"><button class="get">GET STARTED</button></a>
       </div>
     </div>
 
     <div class="icons">
       <div class="num">
         <i class=" captain fa-solid fa-graduation-cap"></i>
-        <h1 class="nos">15+</h1>
+        <h1 class="nos fiv">15+</h1>
         <p class="stud"
           style="font-size: 30px; color: white;">
           Courses</p>
@@ -138,7 +138,7 @@
 
   <section id="started" class="bg-dark container-fluid sec3">
 
-    <h2 class="plat">Welcome to our e-learning platform!<br> <span class="engag">Dive into engaging lessons and
+    <h2 class="plat">  <span class="move">Welcome to our e-learning platform!</span><br> <span class="engag">Dive into engaging lessons and
         resources tailored just for you.<br></span></h2>
     <div class="cardi">
       <div class="card moja mb-3" style="width: 400px; height: 550px;">
@@ -157,14 +157,15 @@
           <p class="card-text lib">This is A cozy, wood-paneled library filled with classic and contemporary novels, offering a quiet escape into the world's most captivating stories</p>
 
         </div>
-        <img src="https://img.freepik.com/free-photo/man-reading_1048-1632.jpg?t=st=1718700338~exp=1718703938~hmac=9baa3a6ee97545dbec040c8added23136225784d8944c0f0c971e31a92129052&w=900" height="300px"class="card-img-bottom" alt="...">
+        <img src="https://img.freepik.com/free-photo/man-reading_1048-1632.jpg?t=st=1718700338~exp=1718703938~hmac=9baa3a6ee97545dbec040c8added23136225784d8944c0f0c971e31a92129052&w=900" class="card-img-bottom" alt="...">
         <a href="novel.html" class="btn btn-primary">Get started</a>
       </div>
-      <div class="card tatu mb-3" style="width: 400px; height: 550px;">
-        <img src="https://img.freepik.com/free-photo/close-up-shot-male-wonk-looks-scrupulously-keeps-hand-rim-spectacles-dressed-formalwear-sits-desktop-reads-literature_273609-23679.jpg?t=st=1718733368~exp=1718736968~hmac=626af1f15432d85cb2bc937050f4ada224188f2d83cceb98ab6b20c8f7d17547&w=1380" class="card-img-top" alt="...">
+      <div class="card tatu mb-3" style="width: 400px; height: 540px;">
+        <img src="https://cdn.pixabay.com/photo/2024/05/20/13/28/ai-generated-8775228_1280.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title revi">Free revision books for all student </h5>
-          <p class=" comp card-text">Our site provides a comprehensive collection of all school revision books, helping students prepare effectively for exams with a wide range of subjects and years covered.Access free revision books to enhance your learning and success.Discover free revision books for effective study and exam preparation</p>
+          <h5 class="card-title revi">Free computer basics lessons </h5>
+          <p class=" comp card-text">Our computer basics lessons site offers easy-to-follow tutorials on fundamental concepts like hardware, software, operating systems, and internet usage. Perfect for beginners, these lessons help build essential skills for personal and professional computer use. Start your tech journey today!.
+            Our site offers beginner-friendly lessons on computer and internet basics.</p>
           <a href="#"   class="btn btn-primary">Get started</a>
         </div>
       </div>
@@ -213,6 +214,9 @@
   </section>
   
 
+  <section>
+
+  </section>
 
 
   <script src="index.js"></script>
