--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <style>
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap');
   
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Pacifico&display=swap');
@@ -214,8 +214,26 @@
   </section>
   
 
-  <section>
-
+  <section id="foot">
+<footer>
+  <div class="footer">
+    <p>🅛🅔🅰️🅡🅝🅘🅵🆈</p>
+    <div>
+      <p>© 2024 Learnify E-learning Platform .All Rights Reserved</p>
+    </div>
+    <div>
+      <i class="fa-brands fa-square-instagram"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-square-whatsapp"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <div>
+          
+          <p>Connect With Us</p>
+        </div>
+    </div>
+  </div>
+</footer>
   </section>
 
 
