--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
             <li>History</li>
             <li>Blog</li>
-            <li>Contact</li>
+            <a href="paper.html"><li>Contact</li></a>
           </ol>
         </nav>
 
@@ -81,6 +81,10 @@
         <a href="#started"><button class="get">GET STARTED</button></a>
       </div>
     </div>
+
+    
+
+
 
     <div class="icons">
       <div class="num">
